--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,12 +15,12 @@ website:
     - text: In class Exercises
       menu:
       - text: In Class Exercise 1
-        href: In-Class_Ex1.qmd
+        href: In-Class_Ex/In-Class_Ex1.qmd
 
     - text: Take Home Exercises
       menu:
       - text: Take Home Exercise1
-        href: Take-Home_Ex1.qmd
+        href: Take-Home_Ex/Take-Home_Ex1.qmd
         
     right:
       - href: index.qmd
