--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,7 +20,9 @@ website:
         - text: Calibrating Hedonic Pricing Model for Private Highrise Property with GWR Method [6]
           href: Hands-On_Ex/Hands-On_Ex4/Hands-On_Ex4.qmd
         - text: In-Class Ex on Calibrating Hedonic Pricing Model for Private Highrise Property with GWR Method
-          href: Hands-On_Ex/Hands-On_Ex4/In-Class_Ex4.qmd          
+          href: Hands-On_Ex/Hands-On_Ex4/In-Class_Ex4.qmd
+        - text: Geographically Weighted Logistic Regression (GWLR) and Application [7]
+          href: In-Class_Ex/In-Class_Ex2.qmd
           
     - text: Take Home Exercises
       menu:
